--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^4.6.0",
+    "materialize-css": "^1.0.0",
     "react": "^16.14.0",
     "react-axios": "^2.0.5",
     "react-dom": "^16.14.0",
